# raspberry-pico-midi-in-test

./: CMakeLists.txt  main.c
